# wiki-retrieval

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: start.sh
app/app/: config.py  main.py
app/app/document_store/: __init__.py  abc.py  factory.py  qdrant.py
app/app/resource/: wiki.py
app/app/schema/: api.py  models.py  openai.py
